frappe/public/scss/kanban.scss
.kanban {
	min-height: #{"calc(100vh - 252px)"};
	// background-color: @light-bg;
	display: flex;
	overflow: auto;

	.kanban-column {
		flex: 0 0 290px;
		max-width: 290px;
		padding: 15px;
		border-radius: $border-radius;
		margin: var(--margin-lg) var(--margin-sm) var(--margin-lg) 0;
		background-color: var(--gray-200);
 		&.add-new-column {
			order: 1;
		}
	}

	.kanban-column-header {
		margin-top: 0;
		margin-bottom: 15px;
		position: relative;
		font-weight: 500;
		font-size: 12px;
		display: flex;
		justify-content: space-between;
		// align-items: center;
		.indicator-pill {
			padding: 2px 8px;
			width: 20px;
			height: 20px;

			&:before{
				margin-right: 0px;
			}
		}

		.column-options {

			.button-group {
				display: flex;
				padding: 8px;

				div.indicator-pill {
					margin: 0 5px;
				}

				.btn.indicator {
					flex: 1;
				}
			}

			.indicator::before {
				margin: 0;
			}
		}

		&:hover {
			cursor: pointer;
		}
	}

	.kanban-column-title {
		font-size: $font-size-lg;
		color: var(--text-color);
		display: flex;
		align-items: center;
		font-weight: normal;

		// margin-left: 10px;
		.kanban-title {
			margin-left: 10px;
		}
	}

	.sortable-ghost > .kanban-card:not(.add-card) {
		background: var(--fg-hover-color) !important;
		color: transparent;

		* {
			background: transparent !important;
			color: transparent !important;
		}

	}

	.kanban-cards {
		min-height: 100px;
	}

	.kanban-card {
		@include card($padding: 10px 15px, $background-color: var(--fg-color));
		margin-top: var(--margin-sm);
		width: 260px;
		min-height: 100px;
		display: flex;
		justify-content: space-between;
		flex-direction: column;
	}

	.add-card {
		justify-content: center;
		display: flex;
		align-items: center;
		color: var(--text-light);
		background-color: var(--fg-color);
		box-shadow: none;
		height: 27px;
		font-size: $font-size-md;
		margin-bottom: var(--margin-md);
		border-radius: 8px;
		&:hover {
			box-shadow: none;
			color: var(--text-color);
			cursor: pointer;
		}

		.octicon-plus {
			top: -1px;
			font-size: 1em;
			margin-right: var(--margin-xs);
			position:relative;
		}
	}

	.kanban-card-wrapper {
		position: relative;

		.kanban-card-redirect {
			display: block;

			&:hover,
			&:focus {
				text-decoration: none;
			}
		}
	}

	.kanban-card:hover, .new-card-area, .edit-card-area {
		box-shadow: var(--shadow-base);
	}

	.kanban-card-wrapper:hover {
		cursor: pointer;
		text-decoration: none;

		.kanban-card-edit {
			opacity: 1;
		}
	}

	.kanban-card-title {
		max-width: 90%;
		font-size: $font-size-base;
	}

	.kanban-card-edit {
		position: absolute;
		right: 10px;
		opacity: 0;
		transition: 0.2s ease;
	}

	.new-card-area, .edit-card-area {
		margin-bottom: 10px;

		textarea {
			color: var(--text-color);
			font-size: 12px;
			resize: none;
			border: none;
			background: none;
			overflow: hidden;
			word-wrap: break-word;
			width: 100%;

			&:focus {
				outline: none;
			}
		}
	}

	.compose-column-form {
		.new-column-title {
			background: transparent;
			border: none;
			outline: none;
		}
	}

	.add-new-column a:hover {
		color: var(--text-color) !important;
	}

	.kanban-card-meta {
		.kanban-assignments {
			display: flex;
			float: right;

			.avatar {
				cursor: default;
			}
		}
	}

	.kanban-empty-state {
		width: 100%;
		line-height: 400px;
	}
}

body[data-route*="Kanban"] {
	.modal .add-assignment:hover {
		// border-color: @text-color;
		i {
			color: var(--text-color) !important;
		}
	}
}

.edit-card-title {
	.h4 {
		margin-top: 5px;
		margin-bottom: 5px;
	}
	span:hover {
		// background-color: @light-yellow;
		cursor: pointer;
	}
	input {
		border: none;
		outline: none;
		width: 100%;
	}
}

[data-theme="dark"] {
	.kanban-column {
		background-color: var(--gray-800);
	}

	.kanban-card, .add-card {
		background-color: var(--bg-color);
	}
}

